--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up JDK 21
-        uses: actions/setup-java@v4  # Updated to v4
+        uses: actions/setup-java@v3
         with:
           java-version: '21'
           distribution: 'temurin'
@@ -30,25 +30,29 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/metro-card-system:latest .
-          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/metro-card-system:latest
+          docker build -t your-dockerhub-username/metro-card-system:latest .
+          docker push your-dockerhub-username/metro-card-system:latest
 
   deploy:
-    needs: build-and-test
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'  # Only deploy on main branch pushes
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+  needs: build-and-test
+  runs-on: ubuntu-latest
+  if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+  steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+    - name: Set up Docker
+      uses: docker/setup-buildx-action@v3
 
-      - name: Pull and run Docker containers
-        run: |
-          docker-compose down
-          docker-compose pull
-          docker-compose up -d
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_TOKEN }}
+
+    - name: Pull and run Docker containers
+      run: |
+        docker compose version
+        docker compose down
+        docker compose pull
+        docker compose up -d
