--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=metro-card-system
 # MySQL Database Configuration
 spring.datasource.url=jdbc:mysql://mysql-db:3306/metro_card_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=Nayan@2002
+spring.datasource.password=Your_database_password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate/JPA Properties
